# image-processing-ufop

./: README.md  TP2.ipynb  TP3.ipynb  TP4.ipynb  TP5.ipynb  TPLISTA.ipynb  Trabalho PDI.ipynb  Untitled.ipynb  pyproject.toml
.ipynb_checkpoints/: TP2-checkpoint.ipynb  TP3-checkpoint.ipynb  Trabalho PDI-checkpoint.ipynb  Untitled-checkpoint.ipynb  nova-checkpoint.tif  nova2-checkpoint.tif
Fonte/: libras_em_vбdeo.ipynb
TP5/: BoundingBoxPatches.m
TP5/momentos/: central_moments.m  humoments.m
