[tool.poetry]
name = "pdi-ufop"
version = "0.1.0"
description = ""
authors = ["Lucas <lucas.ribeiro@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^3.1.14"
octave-kernel = "^0.32.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
